--- a/css/crossword.css
+++ b/css/crossword.css
@@ -3,35 +3,29 @@
 	padding: 0;
 } 
 
-* html input {
-#            padding: 0 0.5em 0.125em;
-#            margin: -0.05em 0;
-}
 
 body {
 	font-family: geneva, sans-serif;
-	font-size: 90%;
 	color: #000;
 	margin: 1em;
 }
 
-#gridbuttons {
-}
 
 #grid {
 	background-color: #111;
 	float: left;
+	position: relative;
+	border: 1px solid black;
+	border-left: none;
+	border-bottom: none;
 }
 
-#wrapper #grid {
-	font-size: 1em;
-	line-height: 1;
-}
 
 #clues {
 	float: left;
 	padding-left: 1em;
 	width: 20em;
+	font-size: 0.9em;
 }
 
 form {
@@ -49,20 +43,24 @@ ol {
 #grid ol li {
 	display: block;
 	float: left;
-	width: 2em; 
+	width: 2em;
 	height: 2em;
 }
 
-#grid input {
-	border: 1px solid #000;
-	width: 2em; 
-	height: 2em;
-	text-transform: uppercase;
-	text-align: middle;
-	vertical-align: middle;
-#	padding: 0.3em 0.4em 0.1em 0.4em;
-	font-size: 1em;
-	display: block;
+body #grid textarea {
+	font-family: sans-serif;
+	font-variant: small-caps;
+	font-size: 0.9em;	
+	text-align: center;
+	border: none;
+	height: 100%;
+	width: 100%;
+	background-repeat: no-repeat;
+	background-position: left bottom;
+	background-image: url("border.gif");
+	line-height: 2.5;
+	resize: none;
+	overflow: hidden;
 }
 
 fieldset {
@@ -80,10 +78,12 @@ div.down {
 fieldset ol li span {
 	position: absolute;
 	color: #111;
-	font-size: 0.7em;
+	font-size: 0.55em;
 	margin: 0 0.1em;
 	z-index: 2;
 	font-weight: bold;
+	left: 2px;
+	top: 0
 }
 
 ol.row li {
@@ -108,6 +108,6 @@ div.active {
 	z-index: 1;
 }
 
-div.active input {
-	background-color: #EEEEEE;
+div.active textarea {
+	background-color: #e9e9e9;
 }
