--- a/css/crossword.css
+++ b/css/crossword.css
@@ -34,6 +34,8 @@ form {
 
 #grid div {
 	position: absolute;
+	top: 0;
+	left: 0;
 }
 
 ol {
@@ -59,6 +61,7 @@ body #grid input {
 	background-position: left top;
 	background-image: url("border.gif");
 	padding-top: 0.625em;
+	background-color: white
 }
 
 fieldset {
@@ -108,4 +111,10 @@ div.active {
 
 div.active input {
 	background-color: #e9e9e9;
+}
+
+
+
+#print-background {
+	display: none;
 }
